[gd_scene load_steps=17 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/models3d/OculusQuestTouchController_Left.gltf" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/models3d/OculusQuestTouchController_Right.gltf" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/models3d/OculusQuestHand_Left.gltf" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/models3d/OculusQuestHand_Right.gltf" type="PackedScene" id=4]
[ext_resource path="res://AvatarScenes/TunnelVRAvatar.gd" type="Script" id=5]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_color = Color( 0.105882, 0.188235, 0.509804, 1 )

[sub_resource type="SphereMesh" id=3]
radius = 0.14
height = 0.3
radial_segments = 24
rings = 24

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
albedo_color = Color( 0.74, 0.62345, 0.5846, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.342484, 0.296732, 0.0535948, 1 )

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.025
bottom_radius = 0.025
height = 0.004

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.027451, 0.027451, 0.027451, 1 )
emission_enabled = true
emission = Color( 0.0509804, 0.14902, 0.960784, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=8]
top_radius = 0.04
bottom_radius = 0.04
height = 0.01

[sub_resource type="SpatialMaterial" id=9]
emission_enabled = true
emission = Color( 0.956863, 0.878431, 0.027451, 1 )
emission_energy = 0.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PrismMesh" id=10]
left_to_right = 0.1
size = Vector3( 0.1, 0.2, 0.1 )

[sub_resource type="SpatialMaterial" id=11]
flags_do_not_receive_shadows = true
albedo_color = Color( 0.341176, 0.411765, 0.976471, 1 )
metallic = 0.41
roughness = 0.45

[node name="RemotePlayer" type="Spatial"]
script = ExtResource( 5 )

[node name="HeadCam" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.691634, 0 )

[node name="csgheadmesh" type="CSGMesh" parent="HeadCam"]
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="skullcomponent" type="CSGMesh" parent="HeadCam/csgheadmesh"]
transform = Transform( 0.9, 0, 0, 0, 1, 0, 0, 0, 0.98, 0, -0.051, 0.085 )
mesh = SubResource( 3 )
material = SubResource( 4 )

[node name="headtorchcone" type="CSGCylinder" parent="HeadCam"]
transform = Transform( 1.75, 0, 0, 0, 0.34202, -1.64446, 0, 0.939693, 0.598535, 0, 0.24, 0 )
visible = false
radius = 0.03
height = 0.051
sides = 16
cone = true
material = SubResource( 5 )

[node name="Inset" type="MeshInstance" parent="HeadCam/headtorchcone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.029, 0 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="headtorchon" type="MeshInstance" parent="HeadCam/headtorchcone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0 )
visible = false
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="SpotLight" type="SpotLight" parent="HeadCam/headtorchcone/headtorchon"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -0.05, 0 )
light_energy = 1.06
light_indirect_energy = 7.26
shadow_enabled = true
shadow_color = Color( 0.0823529, 0.0431373, 0.254902, 1 )
spot_range = 721.6
spot_attenuation = 0.378929
spot_angle = 34.3
spot_angle_attenuation = 1.27456
__meta__ = {
"_editor_description_": ""
}

[node name="HandLeft" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.5, -0.2 )

[node name="OculusQuestTouchController_Left" parent="HandLeft" instance=ExtResource( 1 )]

[node name="OculusQuestHand_Left" parent="HandLeft" instance=ExtResource( 3 )]

[node name="HandRight" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.5, -0.2 )

[node name="OculusQuestTouchController_Right" parent="HandRight" instance=ExtResource( 2 )]

[node name="OculusQuestHand_Right" parent="HandRight" instance=ExtResource( 4 )]

[node name="GuardianPoly" type="Spatial" parent="."]
visible = false

[node name="floorareamesh" type="MeshInstance" parent="GuardianPoly"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
cast_shadow = 0

[node name="floororigin" type="MeshInstance" parent="GuardianPoly"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0.3, 0 )
cast_shadow = 0
mesh = SubResource( 10 )
material/0 = SubResource( 11 )
